--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ ssh2 = { version = "0.9.1", optional = true }
 socket2 = { version = "0.4.0", optional = true }
 
 [target.'cfg(not(windows))'.dependencies]
-posish = "0.6.0"
+posish = "0.6.2"
 
 [target.'cfg(windows)'.dependencies]
 atty = "0.2.14"
@@ -55,3 +55,6 @@ use_socket2 = ["socket2", "unsafe-io/socket2"]
 
 [badges]
 maintenance = { status = "actively-developed" }
+
+[patch.crates-io]
+posish = { git = "https://github.com/cfallin/posish", branch = "openbsd-0.6.2" }
